tests/error/pointer_unknown.gw
#! [contains] unknown type
funcdef unknown_type my_fun();
